Working on reviewer comments and MS.
Added more stop words in text analyses.

--- a/Leader2.bib
+++ b/Leader2.bib
@@ -11,6 +11,23 @@
 
 
 
+@article{van_vugt_genes_2020,
+	title = {From genes to minds to cultures: {Evolutionary} approaches to leadership},
+	issn = {1048-9843},
+	shorttitle = {From genes to minds to cultures},
+	url = {http://www.sciencedirect.com/science/article/pii/S104898432030031X},
+	doi = {10.1016/j.leaqua.2020.101404},
+	abstract = {Evolutionary perspectives are part of any comprehensive explanation of leadership and, more generally, hierarchy formation in groups. This editorial describes contributions to a special issue on the theme of “The evolution and biology of leadership: A new synthesis”, and we reach four main conclusions. First, leadership has been a powerful force in the biological and cultural evolution of human sociality. Humans have evolved a range of cognitive and behavioral mechanisms (adaptations) that facilitate leader-follower relations, including safeguards against overly dominant leaders. Second, how these adaptations interact with local ecological and cultural contexts produces cultural variation in leadership preferences, and in the structure of human organizations more broadly. Third, an evolutionary perspective creates consilience between the social and natural sciences, by integrating leadership theory from diverse fields such as biology, psychology, neuroscience, anthropology, economics, and political science. Fourth, evolutionary approaches – and specifically the collection of articles in this theme issue – produce and test novel hypotheses, such as regards (i) the critical role of leadership in cooperation, (ii) the importance of contextual factors in leader emergence and effectiveness, (iii) interactions between genetic and cultural influences on leadership, and (iv) obstacles and opportunities for women leaders.},
+	language = {en},
+	urldate = {2020-04-06},
+	journal = {The Leadership Quarterly},
+	author = {Van Vugt, Mark and von Rueden, Christopher R.},
+	year = {2020},
+	keywords = {Cultural evolution, Evolutionary biology, Followership, Hierarchy, Leadership, Special issue},
+	pages = {101404},
+	file = {1-s2.0-S104898432030031X-main.pdf:/Users/zgarf/Zotero/storage/IFZXISRP/1-s2.0-S104898432030031X-main.pdf:application/pdf;ScienceDirect Full Text PDF:/Users/zgarf/Zotero/storage/4L76QMRT/Van Vugt and von Rueden - 2020 - From genes to minds to cultures Evolutionary appr.pdf:application/pdf;ScienceDirect Snapshot:/Users/zgarf/Zotero/storage/CXTY7YMA/S104898432030031X.html:text/html}
+}
+
 @article{behrendt_integrative_2017,
 	title = {An integrative model of leadership behavior},
 	volume = {28},
