--- a/Response to reviewers.Rmd
+++ b/Response to reviewers.Rmd
@@ -69,7 +69,7 @@ We also include additional details in the results and supplementary information 
 
 **I don't work with ethnographic data, so perhaps this question is naïve, but: What conclusions can we draw about the actual frequency of leadership functions and traits from the frequency with which they are mentioned in the ethnographic record? There is an implicit assumption that the two are closely aligned. Has such an alignment been confirmed? Is that even testable?**
 
-The reviewer brings up an important point. For one, this is partly our motivation for representing the percentage of cultures which provide at least one text record supporting each of the operationalized variables. Despite this low threshold for accepting supporting evidence, the ethnographic record (sampled here) does not provide support for every variable from every culture. At this culture-level we feel more confident our data provide a estimate of cross-cultural frequency, albeit an inherently noisy, "course-grained" estimation. Also, the entire field of ethnology (the branch of anthropology focused on comparing characteristics of populations across the globe) is based on developing comparable and often quantitative measures from primary ethnographic information. For example, the Ethnographic Atlas, which provides hundreds of coded quantitative and qualitative variables on thousands of cultures and the Standard Cross-Cultural Sample, which provides thousands of coded quantitative and qualitative variables on 186 cultures, were developed in essentially the same way we have developed our operationalized variables here. Developing and contrasting coded measures from primary ethnographic documents is not without limitations, but does represent (perhaps) the only method to systematically and empirically compare measures across a large sample of cultures/populations. At the text-record level drawing strong conclusions about the actual frequency of traits is slightly more problematic. However, fundamentally these results provide a systematic view of the ethnographic record on these measures. From our results field researchers and theoreticians can draw inference from a more comprehensive view of human cultural diversity rather than haphazardly self-selecting a few ethnographic cases studies. 
+The reviewer brings up an important point. For one, this is partly our motivation for representing the percentage of cultures which provide at least one text record supporting each of the operationalized variables. Despite this low threshold for accepting supporting evidence, the ethnographic record (sampled here) does not provide support for every variable from every culture. At this culture-level we feel more confident our data provide a estimate of cross-cultural frequency, albeit an inherently noisy, "course-grained" estimation. Also, the entire field of ethnology (the branch of anthropology focused on comparing characteristics of populations across the globe) is based on developing comparable and often quantitative measures from primary ethnographic information. For example, the Ethnographic Atlas, which provides hundreds of coded quantitative and qualitative variables on thousands of cultures and the Standard Cross-Cultural Sample, which provides thousands of coded quantitative and qualitative variables on 186 cultures, were developed in essentially the same way we have developed our operationalized variables here. Developing and contrasting coded measures from primary ethnographic documents is not without limitations, but does represent (perhaps) the only method to systematically and empirically compare measures across a large sample of cultures/populations. At the text-record level drawing strong conclusions about the actual frequency of traits is slightly more problematic. However, fundamentally these results provide a systematic view of the ethnographic record on these measures. Our intention is that from our results field researchers and theoreticians interested in these topics can draw inference from a more comprehensive view of human cultural diversity rather than haphazardly self-selecting and relying on only a handful of ethnographic cases studies.
 
 We now discuss these limitations and points more clearly in the limitations section. NEED TO DO. 
 
@@ -86,6 +86,8 @@ We greatly appreciate the detailed comments and very useful suggestions.
 **The abstract could be tightened up in terms of description of particular costs and benefits to leaders and followers. And a brief justification in the abstract for why the study compares costs and benefits would be useful- e.g. understanding evolution of leader or follower strategies requires understanding the (fitness-relevant) costs and benefits to them.**
 
 **Lines 88-89 suggest that the paper's ethnographic analysis will include leadership at all levels of social organization. But does the theory and analysis reported in the paper really extend to all levels of social organization- such as child play groups or households? It seems the focus is still community-level cooperation among adults. Perhaps clarify.**
+
+This statement in the introduction is intended to apply across disciplines focused on leadership dynamics and not specifically apply to the methods of the current study. The reviewer brings up a well-recieved point, however. Any work in developmental psychology on social hierarchy adn leadership would not be subjec to this critique. We have not rephrased this claim to better fit with our objectives and outcomes here. 
 
 **In the "Functions of leadership" section, I would expand on your claim that leadership emerges when there is demand for a "managerial presence". You might describe collective action or coordination problems here. That might better motivate the subsequent discussion of different functions of leadership in small-scale societies, as well as discussion of the conditions (e.g. demographic change, wealth access) that increase institutionalization or authority of leaders. Glowacki and von Rueden (2015) suggest that inter-family conflict resolution is where leader institutionalization often first arises, and Roscoe (2009) makes a similar argument concerning leadership in highland New Guinea, where the institutionalized display of material wealth organized by Big Men is rewarded more than ad hoc leadership during war.**
 
@@ -128,6 +130,10 @@ We now discuss these disctintions in more detail in the methods and limitations 
 **Give more explanation of prestige theory and computational services theory (lines 1279-1280), including what different predictions they make.**
 
 **Followers in many cases may be making best of limited options, particularly in societies with steeper hierarchy. So I'm not sure benefits of followership must outweigh the costs (1414-1415) in same way as for leadership.**
+
+We completely agree. This statement was intneded to be in reference to a priori assumptions on the evolution and emergence of leader-follower dynamics, similar to discourse on the conundrum of the evolution of cooperation. Though, clearly, in particular circumstances an individual will cooperate when doing so incurs a cost just as followers in particular circumstances will follow when doing so incurs a cost. We assume that over evolutionary history and for leader-follower dynamics to be selected for, both leaders and followers would have to recieve benefits on average, over time. 
+
+We have revised this statement. CHECK. NEED TO DO. 
 
 
 
