--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -32,7 +32,7 @@ Leadership in WEIRD settings often differs substantially from non-WEIRD settings
 
 Across human societies, the influence of leaders stands to substantially shape the nature of group structure and group outcomes. Simultaneously, social norms, competing leaders, pressures from rival or cooperative groups, and followers preferences can greatly constrain a leader's agenda. The interactions between the strategies of individual leaders, pressures of followership, and group dynamics are likely to strongly contribute to organizational variation across human populations including social and economic trajectories [@wiessner_risk_1982] and cultural evolutionary processes [@henrich_big_2015]. 
 
-Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., @price_evolution_2014; @henrich_big_2015; @richerson_tribal_2009; @van_vugt_evolutionary_2006; @pietraszewski_evolution_2019; @hooper_theory_2010; @kaplan_evolutionary_2009; @von_rueden_roots_2014; @hagen_leadership_2019], accompanied by a growing body of empirical results [e.g., @bowser_womens_2010; @cheng_two_2013; @garfield_investigating_2019; @garfield_evolutionary_2019; @von_rueden_leadership_2014; @von_rueden_sex_2018; @smith_leadership_2016; @smith_obstacles_2018]. This integration as been informative. Drawing on the study of leadership in evolutionary perspective and across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015; @garfield_review_2019; @van_vugt_selected_2010]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains and at all levels of social organization. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have been relatively under-investigated. Current outstanding questions for evolutionary leadership scholars include the degree to which the nature of leadership is shaped by population-level variation at different levels of social organizations and the costs and benefits leaders and followers incur across distinct leadership systems. 
+Leadership and followership are critical in understanding group structure and have been the focus of much scientific attention across psychology, sociology, political science, and managerial studies. Until recently, this very large body of work was relatively disconnected from approaches to leadership in anthropology and biology. Under a unifying evolutionary framework, social and biological scientists have now produced a sizable body of theory on the evolution and cross-cultural patterning of leadership and followership [e.g., @price_evolution_2014; @henrich_big_2015; @richerson_tribal_2009; @van_vugt_evolutionary_2006; @pietraszewski_evolution_2019; @hooper_theory_2010; @kaplan_evolutionary_2009; @von_rueden_roots_2014; @hagen_leadership_2019], accompanied by a growing body of empirical results [e.g., @bowser_womens_2010; @cheng_two_2013; @garfield_investigating_2019; @garfield_evolutionary_2019; @von_rueden_leadership_2014; @von_rueden_sex_2018; @smith_leadership_2016; @smith_obstacles_2018]. This integration as been informative. Drawing on the study of leadership in evolutionary perspective and across diverse, small-scale and traditional societies can help develop more generalizable theories and offer applications to shape organizational structure in ways which are more consistent with human evolutionary history and evolved leader-follower psychologies [@von_rueden_leadership_2015; @garfield_review_2019; @van_vugt_selected_2010]. Nonetheless, much of this work has focused on community or political leaders, often overlooking the nature of leadership and followership across social domains and levels of social organization, such as among kin groups, economic groups, and sub-groupings of individuals within residential communities. Moreover, while the benefits leaders accrue for their services have received substantial attention the costs of leadership for both leaders and followers have been relatively under-investigated. Current outstanding questions for evolutionary leadership scholars include the degree to which the nature of leadership is associated with population-level variation at different levels of social organizations and the costs and benefits leaders and followers incur across distinct leadership systems.
 
 Evolutionary scholars typically define leaders as individuals who maintain disproportionate influence over decision-making within groups [@von_rueden_leadership_2015], whatever the group may be. Leadership roles are also often associated with specific rights and responsibilities. Not surprisingly, the functions leaders serve then are often closely linked to group contexts and the salient challenges groups face. Certain types of groups, such as kin groups, economic groups, or political groups, may tend to favor leaders with specific qualities, however there can be substantial variation in the traits of leaders within these groups as well as between them.
 
@@ -45,7 +45,7 @@ We first briefly review theoretical, ethnographic, and empirical perspectives on
 
 Leaders emerge in all human societies. That is, within every population there are particular contexts in which one individual maintains a disproportionate level of influence in the group and functions to facilitate group goals and provides services to the group. Adopting the broad definition of leadership given above, parents can also be defined as leaders of nuclear families. Strong community leadership, however, is extremely common cross-culturally including among hunter-gatherers and relatively small-scale societies [@garfield_review_2019; @von_rueden_leadership_2015].  
 
-Despite the universality of the phenomenon of leadership, the nature of leadership across populations and across social contexts is highly diverse and the emergence of leaders and the functions they serve are expected to be closely tied to group structure and group goals [@van_vugt_cognitive_2007]. Among many of the ethnographically described small-scale societies, which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and leaders emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. In the absence of institutionalized organizational structure leaders often take on essential roles in group coordination and collective action, including facilitating conflict resolution within or between autonomous households or kin groups, managing individual investments to group-wide projects, and administering sanctions to individuals who do not appropriately contribute to collective actions, comply with group policies, or seriously violate social norms. @glowacki_leadership_2015 draw on empirical, ethnographic, and theoretical models of leader emergence and suggest in small-scale societies institutionalized leadership roles are likely to initially emerge to resolve conflicts between families. @roscoe_social_2009 draws on the ethnography of highland New Guinea in describing the modular structure of human societies and suggests the functions of community leaders in small-scale societies are structured by the joint demands of signaling military fromidability to rival groups and facilitating within-group conflict resolution and cooperation. In addition to military prowess, 'big-men' are characterized by, "talents for oratory, mediation, and organization were instrumental in reducing their internal conflict and enhancing the ability of their members to coordinate their actions as a group" [@roscoe_social_2009][p.104].
+Despite the universality of the phenomenon of leadership, the nature of leadership across populations and across social contexts is highly diverse and the emergence of leaders and the functions they serve are expected to be closely tied to group structure and group goals [@van_vugt_cognitive_2007]. Among many of the ethnographically described small-scale societies, which generally lack multi-level, institutionalized social and political structures, leadership at the community level is typically informal and ephemeral and leaders emerge contextually when demands of coordination or conflict resolution require a managerial presence [@von_rueden_leadership_2015]. In the absence of institutionalized organizational structure leaders often take on essential roles in group coordination and collective action, including facilitating conflict resolution within or between autonomous households or kin groups, managing individual investments to group-wide projects, and administering sanctions to individuals who do not appropriately contribute to collective actions, comply with group policies, or seriously violate social norms. @glowacki_leadership_2015 draw on empirical, ethnographic, and theoretical models of leader emergence and suggest in small-scale societies institutionalized leadership roles are likely to initially emerge to resolve conflicts between families. @roscoe_social_2009 draws on the ethnography of highland New Guinea in describing the modular structure of human societies and suggests the functions of community leaders in small-scale societies are structured by the joint demands of signaling military fromidability to rival groups and facilitating within-group conflict resolution and cooperation. In addition to military prowess, 'big-men' are characterized by, "talents for oratory, mediation, and organization were instrumental in reducing their internal conflict and enhancing the ability of their members to coordinate their actions as a group" [@roscoe_social_2009, p. 104].
 
 Given specific demands of community organization and conflict resolution, leadership tends to be context-specific and leaders in such contexts often draw on persuasive capacities and leverage community-based respect, specialized skills or knowledge, and social support to achieve or maintain community influence [@kantner_identifying_2010; @lewis_leaders_1974; @boehm_egalitarian_1993]. The theoretical and ethnographic literature suggests these demands most commonly arise in the contexts of collective actions and in conflict resolution [e.g., @glowacki_leadership_2015; @gavrilets_convergence_2016; @hooper_theory_2010; @von_rueden_solving_2015; @henrich_big_2015; @pietraszewski_evolution_2019]. Demands of mediation in within-group conflict resolution, although variable in scale, are probably a universal feature of human groups [@king_origins_2009; @van_vugt_leadership_2008]. Demands of between-group interactions, including both conflict and cooperation are also very common across small-scale societies, including hunter-gatherers [@glowacki_evolutionary_2017; @hames_pacifying_2019; @richerson_cultural_2016; @henrich_evolution_2009; @apicella_social_2012]. Across relatively small-scale societies, at the community level, representing the group and managing both internal and external relationships and conflicts are expected to be the most salient functions of leaders. Within communities, however, leaders may emerge whenever individuals form groups. The role of leaders in ritual contexts, such as in initiations [@singh_cultural_2017], and in providing social services, including facilitating marriages [@walker_evolutionary_2011] and organizing social activities [@wiessner_food_1996], are also expected to be common functions leaders serve. 
 
@@ -68,7 +68,9 @@ In contrasting the functions leaders serve in smaller-scale, non-industrial, and
 
 ## The qualities of leaders across cultures and contexts
 
-There are some broad commonalities in the qualities of community leaders across culturally and economically diverse populations. When strong community leaders emerge, they are most typically high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have influence [@henrich_evolution_2001; @van_vugt_evolutionary_2006; @collier_politics_1981; @low_men_1992; @roscoe_social_2019]. Substantial evidence suggests there is a near universal male-bias in community, political, or group-level leadership across human societies [@low_sex_1992; @whyte_status_1978; @sanday_female_1981], as well as across diverse non-human social species [@smith_obstacles_2018; @tiger_female_1978]. @low_sex_1992 found in a systematic cross-cultural sample that in only seven of 93 societies political leaders of both sexes were present and in only two societies were female political leaders identified as equally powerful as their male counterparts. Even among these rare cases, powerful female political leaders are still infrequent within the group. Women were more likely to hold influential leadership positions within kin groups [@low_sex_1992]. More recently, empirical studies have suggested sex-differences in political influence and leadership across human societies including among more egalitarian cultural contexts are more likely driven by ecological and social structural factors, rather than sex (or gender identity) per se, including social capital and access to same-sex allies [@yanca_female_2004] and/or sex differences in the sexual division of labor [@von_rueden_sex_2018]. Ethnographic fieldwork comparing leaders and non-leaders in two distinct small-scale societies has revealed sex is not a strong predictor of community influence or elected leadership positions, after accounting for a broad range of demographic, phenotypic, cognitive, social, and other traits derived from the evolutionary theoretical literature [e.g., @garfield_investigating_2019; @von_rueden_sex_2018]. 
+There are some broad commonalities in the qualities of community leaders across culturally and economically diverse populations. When strong community leaders emerge, they are most typically high status males who embody the ideal qualities most respected by the group and necessary for successful leadership in the domains in which they have influence [@henrich_evolution_2001; @van_vugt_evolutionary_2006; @collier_politics_1981; @low_men_1992; @roscoe_social_2019]. There has been increasing interdisciplinary discussion and consensus on the closely related topics of social status, power, authority, rank, prestige, and leadership [e.g., @blader_whats_2014; @cheng_dominance_2019; @kantner_identifying_2010; @von_rueden_roots_2014]. We draw on discussions by @blader_whats_2014 and @von_rueden_roots_2014 and coneptualize social status as a relative indicator of an individuals social value by the group and their access to contested resources within the group. The relationship between leadership (i.e., social influence) and status (i.e., social value) is expected to be colinear [@von_rueden_leadership_2015; @van_vugt_genes_2020], however, if there is causality between the two it is likely to be complex, context-specific, and driven by underlying correlates.
+
+Substantial evidence suggests there is a near universal male-bias in community, political, or group-level leadership across human societies [@low_sex_1992; @whyte_status_1978; @sanday_female_1981], as well as across diverse non-human social species [@smith_obstacles_2018; @tiger_female_1978]. @low_sex_1992 found in a systematic cross-cultural sample that in only seven of 93 societies political leaders of both sexes were present and in only two societies were female political leaders identified as equally powerful as their male counterparts. Even among these rare cases, powerful female political leaders are still infrequent within the group. Women were more likely to hold influential leadership positions within kin groups [@low_sex_1992]. More recently, empirical studies have suggested sex-differences in political influence and leadership across human societies including among more egalitarian cultural contexts are more likely driven by ecological and social structural factors, rather than sex (or gender identity) per se, including social capital and access to same-sex allies [@yanca_female_2004] and/or sex differences in the sexual division of labor [@von_rueden_sex_2018]. Ethnographic fieldwork comparing leaders and non-leaders in two distinct small-scale societies has revealed sex is not a strong predictor of community influence or elected leadership positions, after accounting for a broad range of demographic, phenotypic, cognitive, social, and other traits derived from the evolutionary theoretical literature [e.g., @garfield_investigating_2019; @von_rueden_sex_2018]. 
 
 Across cultural contexts elders, respected individuals, and highly intelligent or knowledgeable individuals tend to have greater influence over community decisions across cultures, including among the most egalitarian hunter-gatherers, stratified chiefdoms, and contemporary state-level organizations [@silverman_how_1978; @van_vugt_cognitive_2007; @tooby_cognitive_2006; @garfield_review_2019; @bass_handbook_1990]. Drawing on cross-national data through the GLOBE project from over 15,000 middle managers across 60 countries, @den_hartog_culture_1999 conclude that elements of charismatic and transformational leadership -- leadership styles when leaders express an inclusive vision of future progress, lead through inspiration, and develop initiatives in collaboration -- are universally endorsed across nations and are qualities perceived to be associated with effective leadership. In particular, inducing motivation, having foresight, being encouraging and communicative, trustworthiness, and building self-confidence among followers are suggested to be universal attributes of outstanding leadership in managerial contexts.
 
@@ -167,6 +169,8 @@ We then explored "features" in our data. There are numerous approaches to detect
 <!-- To identify natural groupings of variables among the research coded leader quality and leader function measures, we conducted two cluster analyses using the pvclust package [@suzuki_pvclust:_2015]. These analyses allow us to interpret *post-hoc* (1) the degree to which coded variables relate to established theoretical models, (2) identify potential phenotypic profiles of leaders, and (3) offer empirical and theoretical future directions related to suites of qualities or functions likely to covary. -->
 
 Our third goal was to determine which leader and follower benefits and costs were most commonly mentioned in the ethnographic record, computing 95% CIs as above.
+
+To suppliment results from the aformentioend methods, we also performed textual analyses...OTHER METHODS. NEED TO DO. 
 
 
 
@@ -296,6 +300,18 @@ plot.variable.support_costs_benefits
 <!-- m_qPC2_sub_plot + m_qPC2_group_plot -->
 <!-- ``` -->
 
+## Disentangleing the relationship between leadership and high status
+
+Figure \@ref(fig:varsupport) identified *high status* as the most frequent leader quality in the ethnographic record, documented in over 30% of text records and in over 90% of cultures. This result is neither surprising nor particularly informative. However, these data present an oppurtunity to explore the relationship between high status and leadership, as represented in ethnographic texts. To do so, we draw on the term-document matrix of our ethnographic sample which was developed by computing the frequencies of all “informative” words in each text record after removing all punctuation and English stop words (uninformative words such as the, is, at), stemming the remaining words (reducing inflections such as plurals and past tenses to the root, or stem, words). In this data matrix the columns are all the unique word stems (terms), rows were the text records (documents), and the values in each cell were the frequencies of each word stem in each text record. The coding of *high status* was joined with this term-document matrix. This process produced a matrix with `r dim(dtm)[1]` rows with one for each text-record and `r dim(dtm)[2]` columns with a column for each unique term and a column for the researcher-coded *high status* value ($0$ or $1$). 
+
+We used lasso regression as a variable selection technique, which is especially useful when the number of predictors is much greater than the number of cases (i.e., $p > > n$). Lasso regression has a penalty or shrinkage term, $\lambda$: larger values of $\lambda$ retain more variables in the model, at the risk of over-fitting, whereas smaller values of $\lambda$ decrease the number of predictors retained in the model, at the risk of under-fitting. The optimal value of $\lambda$ can be estimated with cross-validation [@tibshirani_regression_1996; @zou_regularization_2005]. We used the glmnet package [@friedman_regularization_2010] to fit a lasso regression model to determine which words best predicted evidence for high status as a leader quality. Because this outomce is counts of text recrods, we used Poisson errors. We used tenfold cross-validation to choose the $\lambda$ parameter that minimized deviance. We then plotted all the non-zero coefficients (Figure \@ref(fig:status-text). The most predictive words then epitomize the semantic content of the text records which provide evidence of high status as a quality of leaders.
+
+```{r status-text, echo=F, message=F, fig.width=8, fig.height=6, fig.align='center', fig.cap="Lasso Poisson regression coefficients, which indicate the words whose frequencies in each text record best predicted evidence for the *high status* leader quality in each text record. Coefficients estimated with glmnet package using cross-validation to determine the optimal value of lambda [@friedman_regularization_2010]. Blue values are positive predictors; red values are negative predictors."}
+highstatus_plot
+```
+
+Figure \@ref(fig:status-text) depicts the `r length(highstatus_plot$data$Word)` words with non-zero (mostly positive) coefficents. The words most predictive of evidence for high status leaders are *`r rev(highstatus_plot$data$Word)[1:3]`*, and *`r rev(highstatus_plot$data$Word)[4]`*, respectively. The words, *`r rev(highstatus_plot$data$Word)[5:7]`* are moderately strong predictors and notable words with low predictive value (including positive and negative predictors) include *authority*, *influence*, *king*, *chief*, and *headman*. The word *follow* is the strongest negative predictor and *company* and *economic* are marginal negative predictors. 
+
 ## Effects of document meta-data on leadership patterns
 
 ```{r tabauthorgender}
@@ -379,7 +395,7 @@ The larger organization subcluster included variables such as *Organize cooperat
 
 ## Benefits and costs of leadership and followership
 
-The evolution of leadership and followership is somewhat perplexing. Leadership often involves the provisioning of a public good at an individual cost, raising the question of how the individual benefits of leadership outweigh the costs. Followership, on the other hand, involves relinquishing individual decision-making to a leader who might or might not act in the follower's interest. The benefits of followership must also outweigh the costs. We therefore coded all benefits and costs of both leadership and followership to better understand which benefits and costs are most commonly associated with leading or following. Leaders were widely reported to receive material benefits and social status, but loss of material resources and social status were also widely reported. The results were similar for followers: followers benefited from increased material and social resources, but also often lost material and social resources. Our results cannot determine if the benefits to leaders and followers outweighed their costs, but they do shed light on the social and biological pressures associated with leadership and social hierarchy. For both leaders and followers, individuals stood to lose what they were able to gain. The major difference between leaders and followers lay in leaders' opportunities for increased social status and mating opportunities, relative to followers. See Figure \@ref(fig:varsupportcb).
+The evolution of leadership and followership is somewhat perplexing. Leadership often involves the provisioning of a public good at an individual cost, raising the question of how the individual benefits of leadership outweigh the costs. Followership, on the other hand, involves relinquishing individual decision-making to a leader who might or might not act in the follower's interest. The benefits of followership (and by extension, group living) must also outweigh the costs for leadership to evolve and be maintained. We therefore coded all benefits and costs of both leadership and followership to better understand which benefits and costs are most commonly associated with leading or following. Leaders were widely reported to receive material benefits and social status, but loss of material resources and social status were also widely reported. The results were similar for followers: followers benefited from increased material and social resources, but also often lost material and social resources. Our results cannot determine if the benefits to leaders and followers outweighed their costs, but they do shed light on the social and biological pressures associated with leadership and social hierarchy. For both leaders and followers, individuals stood to lose what they were able to gain. The major difference between leaders and followers lay in leaders' opportunities for increased social status and mating opportunities, relative to followers. See Figure \@ref(fig:varsupportcb).
 
 ## Limitations 
 
